<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZATC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_user_name">请输入用户名</string>
    <string name="enter_user_pwd">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="plot_list">地块列表</string>
    <string name="plot_main_home">地块首页</string>
    <string name="plot_main_info">基本信息</string>
    <string name="add_grow_process">增加生长记录</string>
    <string name="save">保存</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="search">搜索</string>
    <string name="mu">亩</string>
    <string name="land_num">土地数量</string>
    <string name="unit_npk">kg/亩</string>
    <string name="unit_organic">g/kg</string>
    <string name="unit_element">mg/kg</string>
    <string name="finish">完成</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">未完成</string>
    <string name="varieties_of">种</string>
    <string name="tun">吨</string>
    <string name="crops">农作物</string>
    <string name="annual_yield">年产量</string>
    <string name="province">区域</string>
    <string name="crop">种类</string>
    <string name="yield">产量</string>
    <string name="size">面积</string>
    <string name="upload_success">提交成功</string>
    <string name="no_picture">图片没找到</string>
    <string name="upload_error">提交失败</string>
    <string name="date">日期</string>
    <string name="date_of_sowing">播种时间</string>
    <string name="plant_height">株高数据</string>
    <string name="stem_diameter">茎粗数据</string>
    <string name="temperature">气温数据</string>
    <string name="address_error">地址不正确</string>
    <string name="vs">对比</string>
    
    
    
    
    
    <string name="please_edit">请编辑后在提交</string>
    <string name="add_crop">添加农作物</string>
    <string name="enter_crop_name">请输入农作物名称</string>
    <string name="crop_name">农作物名称:</string>
    <string name="add_crop_brand">添加农作物品牌</string>
    <string name="enter_crop_brand_name">请输入农作物品牌名称</string>
    <string name="brand_name">品牌名称:</string>
    <string name="brand_name2">品牌名称</string>
    <string name="please_enter_brand_name">请输入品牌名称</string>
    <string name="please_edit_name">请编辑名称后在提交</string>
    <string name="please_edit_brand">请编辑品牌后在提交</string>
    <string name="please_edit_index_name">请编辑指标名称后在提交</string>
    <string name="please_edit_data">请先编辑数据...</string>
    <string name="new_plot">新建地块</string>
    <string name="plot_name_already_exists">地块名已存在</string>
    <string name="add_weather_data">添加天气数据</string>
    <string name="change_pwd_success">密码修改成功</string>
    <string name="change_pwd_fail">密码修改失败</string>
    <string name="change_pwd">修改密码</string>
    <string name="new_pwd_not_null">新密码不能为空</string>
    <string name="enter_the_same_pwd">请输入相同密码</string>
    <string name="edit_plot_info">编辑地块信息</string>
    <string name="delete_success">删除成功</string>
    <string name="management_base">管理基地</string>
    <string name="management_grow_data">管理生长数据</string>
    <string name="management_weather_data">管理天气数据</string>
    <string name="weather_data">天气数据</string>
    <string name="land_location">土地方位</string>
    <string name="land_location2">土地方位:</string>
    <string name="choice_land_location">请选择土地方位...</string>
    <string name="management_plot">管理地块</string>
    <string name="plot_base_info">地块基本信息</string>
    <string name="user_info">用户信息</string>
    <string name="user_name">姓名：</string>
    <string name="duty">职位：</string>
    <string name="phone">手机：</string>
    <string name="email">邮箱：</string>
    <string name="country">国：</string>
    <string name="province_city">省/市：</string>
    <string name="city_district">市/区/县：</string>
    <string name="land_name">基地名称：</string>
    <string name="address">地址：</string>
    <string name="owner_name">业主姓名：</string>
    <string name="please_fill_owner_name">请填写业主姓名...</string>
    <string name="technician">技术人员：</string>
    <string name="contact_number">联系电话：</string>
    <string name="please_fill_contact_number">请填写联系电话</string>
    <string name="frost_free_period">无霜期：</string>
    <string name="fill_frost_free_period">请填写无霜期...</string>
    <string name="effective_temperature">有效积温：</string>
    <string name="fill_effective_temperature">请填写有效积温...</string>
    <string name="annual_precipitation">年降水量：</string>
    <string name="fill_annual_precipitation">请填写年降水量...</string>
    <string name="soil_properties">土壤性质:</string>
    <string name="fill_soil_properties">请填写土壤性质...</string>
    <string name="soil_ph">土壤酸碱度:</string>
    <string name="fill_soil_ph">请填写土壤酸碱度...</string>
    <string name="npk_content">氮磷钾含量:</string>
    <string name="fill_npk_content">请填写氮磷钾含量...</string>
    <string name="organic_matter_content">有机质含量:</string>
    <string name="fill_organic_matter_content">请填写有机质含量...</string>
    <string name="trace_element">中微量元素:</string>
    <string name="fill_trace_element">请填写中微量元素含量...</string>
    <string name="pre_crop_species">前茬作物种:</string>
    <string name="fill_pre_crop_species">请填写前茬作物种...</string>
    <string name="crop_yield">前茬产量:</string>
    <string name="fill_crop_yield">请填写前茬产量...</string>
    <string name="land_size">基地大小:</string>
    <string name="fill_land_size">请填写基地大小...</string>
    <string name="base_production">基地产量:</string>
    <string name="fill_base_production">请填写基地产量...</string>
    <string name="remarks">备注:</string>
    <string name="fill_remarks">请填写备注...</string>
    <string name="click_refresh">点击重新刷新</string>
    <string name="select_brand">选择品牌:</string>
    <string name="plot_name">地块名称:</string>
    <string name="enter_plot_name">请填写地块名称...</string>
    <string name="plot_brief_introduction">地块简介:</string>
    <string name="enter_plot_brief_introduction">请填写地块简介...</string>
    <string name="users">负责人:</string>
    <string name="sowing_time">播种时间:</string>
    <string name="plot_size">地块大小:</string>
    <string name="enter_plot_size">请填写地块大小</string>
    <string name="plot_yield">地块产量:</string>
    <string name="enter_plot_yield">请填写地块产量</string>
    <string name="additive">添加剂:</string>
    <string name="additive_concentration">添加剂浓度:</string>
    <string name="enter_additive_concentration">请填写添加剂浓度...</string>
    <string name="edit">编辑</string>
    <string name="consult_a_map">查看地图</string>
    <string name="camera">拍照</string>
    <string name="select_from_album">从相册中选取</string>
    <string name="all">全部</string>
    <string name="please_enter_crop_name">请输入农作物名称</string>
    <string name="add_evaluation_index">添加评价指标:</string>
    <string name="please_enter_evaluation_index_name">请输入指标名称</string>
    <string name="please_enter_data_info">请填写数据信息...</string>
    <string name="plot">地块</string>
    <string name="plant_height_cm">株高cm</string>
    <string name="stem_diameter_mm">茎粗mm</string>
    <string name="buccal_number_per_plant">单株颊数个</string>
    <string name="wheat_plot_1">小麦地块1</string>
    <string name="plot_1">1号地块</string>
    <string name="please_fill_growth_record">请填写生长记录...</string>
    <string name="plot_2">2号地块</string>
    <string name="jointing">拔节</string>
    <string name="growth_stage">生长阶段</string>
    <string name="daytime_weather">白天天气:</string>
    <string name="enter_daytime_weather">请输入白天天气</string>
    <string name="daytime_tem">白天温度:</string>
    <string name="enter_daytime_tem">请输入白天温度</string>
    <string name="evening_weather">晚上天气:</string>
    <string name="enter_evening_weather">请输入晚上天气</string>
    <string name="night_tem">晚上温度:</string>
    <string name="enter_night_tem">请输入晚上温度</string>
    <string name="time">时间</string>
    <string name="weather_day">天气(白天)</string>
    <string name="tem_day">温度(白天)</string>
    <string name="weather_night">天气(夜晚)</string>
    <string name="tem_night">温度(夜晚)</string>
    <string name="click_select_location">点击选择坐标</string>
    <string name="exit">退出</string>
    <string name="old_pwd">旧密码:</string>
    <string name="enter_old_pwd">请输入旧密码...</string>
    <string name="new_pwd">新密码:</string>
    <string name="enter_new_pwd">请输入新密码...</string>
    <string name="pwd_confirmation">密码确认:</string>
    <string name="enter_pwd_confirmation">请输入新密码...</string>
    <string name="loading">正在加载</string>
    <string name="wheat">小麦</string>
    <string name="delete">删除</string>
    <string name="fill_the_base_name">请填写基地名称...</string>
    <string name="fill_the_base_address">请填写基地地址...</string>
    <string name="fill_the_user_name">请填写业主姓名...</string>
    <string name="fill_the_user_phone">请填写联系电话...</string>
    <string name="fill_the_base_location">请选择土地方位</string>
    <string name="fill_the_base_size">请填写基地大小...</string>
    <string name="fill_the_base_yield">请填写基地产量...</string>
    <string name="fill_the_base_picture">请选择基地图片...</string>
    <string name="upload_error_retry">提交失败,请稍后重试</string>
    <string name="new_base">新建基地</string>
    <string name="base_management">基地管理</string>
    <string name="exit_press_again">再按一次退出程序</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="pwd_not_null">密码不能为空</string>
    <string name="add_other_data">增加其他数据</string>
    <string name="edit_other_data">编辑其他数据</string>
    <string name="edit_grow_process">编辑生长工序</string>
    <string name="add_grow_data">增加生长数据</string>
    <string name="net_data_error">网络数据获取失败，请稍后重试</string>
    <string name="is_exit">是否退出登录</string>
    <string name="search_result">搜索结果</string>
    <string name="input_search_content">请输入搜索内容...</string>
    <string name="w_mu">万亩</string>
    <string name="login_succeed">登录成功</string>
    <string name="user_name_error">用户名或密码不正确</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="invalidSD">sdcard无效！</string>
    <string name="photo">选择相册</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="upload_no_data">请填写数据后再上传...</string>
    <string name="gl_wait">请稍等</string>
    <string name="data_no_ps">没有找到图片</string>

</resources>