<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/layout_top"
            layout="@layout/custom_commen_title"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/layout_header"
            android:visibility="gone" >

            <TextView
                android:id="@+id/plot_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/time"
                android:textColor="#011" />
    <View 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey_line"
                />
            <TextView
                android:id="@+id/growth_data1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/weather_day"
                android:textColor="#011" />
    <View 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey_line"
                />
            <TextView
                android:id="@+id/growth_data2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tem_day"
                android:textColor="#011" />
    <View 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey_line"
                />
            <TextView
                android:id="@+id/growth_data3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/weather_night"
                android:textColor="#011" />
    <View 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey_line"
                />
            <TextView
                android:id="@+id/add_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tem_night"
                android:textColor="#011" />
        </LinearLayout>

        <com.zte.agricul.view.DeleteListView
            android:id="@+id/main_data_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:cacheColorHint="#00000000"
            android:divider="@color/grey_line"
            android:dividerHeight="1.0dip"
            android:fadingEdge="none"
            android:listSelector="#00000000"
            android:scrollingCache="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/net_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/wifi"
        android:gravity="center"
        android:text="@string/click_refresh"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_loading"
        layout="@layout/custom_loding_dialog_layout" />

</RelativeLayout>