<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/layout_top"
            layout="@layout/custom_commen_title"
            android:focusable="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/time_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/grey_7f"
                        android:textSize="@dimen/text_size_15" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/landName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/landName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/daytime_weather"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />

                    <EditText
                        android:id="@+id/daytime_weather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="start"
                        android:hint="@string/enter_daytime_weather"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textSize="14dp"
                        android:singleLine="true"
                         >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/daytime_tem"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />

                    <EditText
                        android:id="@+id/daytime_tem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="start"
                        android:hint="@string/enter_daytime_tem"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textSize="14dp" 
                        android:singleLine="true"
                        android:inputType="numberDecimal">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/evening_weather"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />

                    <EditText
                        android:id="@+id/night_weather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="start"
                        android:hint="@string/enter_evening_weather"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textSize="14dp" 
                        android:singleLine="true">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/night_tem"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />

                    <EditText
                        android:id="@+id/night_tem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="start"
                        android:hint="@string/enter_night_tem"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textSize="14dp" 
                        android:singleLine="true"
                        android:inputType="numberDecimal">
                    </EditText>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/layout_loading"
            layout="@layout/custom_loding_dialog_layout" />
    </LinearLayout>

</RelativeLayout>